# kata-python

./: .gitignore  README.md  fabfile.py  manage.py  requirements.txt  setup.py  spring-security-oauth.md
7weapons/sample/: AlertEmailTest.py
7weapons/util/: EmailSender.py  FileLogger.py
doc/: README.md  ccie-collaboration.md  cpp_test_mock.md  spring-security-oauth.md
example/: aiortc_rtcp_packet.py  asyncio_client.py  asyncio_concurrent.py  asyncio_multi_jobs.py  asyncio_server.py  call_flow.py  chat_client.py  chat_server.py  countdown_timer.py  plot_demo.py  reactor_with_transport.py  test.py  udp_client.py  udp_server.py  video-flow.gv
kata/dash-examples/: dash_simple_example_pandas_datareader.py
kata/magic-dash-pro/: app.py  requirements.txt  server.py
kata/magic-dash-pro/callbacks/: login_c.py
kata/magic-dash-pro/components/: core_side_menu.py  personal_info.py  user_manage.py
kata/magic-dash-pro/configs/: __init__.py  auth_config.py  base_config.py  layout_config.py  router_config.py
kata/pg-client/: README.md  config.py  env.example  main.py  pyproject.toml  test_setup.py  utils.py
mezzsite/: settings.py  wsgi.py
notebook/: Untitled1.ipynb  bmi.ipynb  math_ equations.ipynb  packet_struct_demo.ipynb  rtcp_packet_demo.ipynb
script/util/: remove_cr.py
src/lib/: video-flow.gv
src/portal/: __init__.py
src/portal/static/: login_flow  (+22 more)
src/util/: Machine.py  remove_suffix.py
test/: selenium_exam_1.py  selenium_exam_baidu.py  test_aiortc_rtcp_packet.py  test_asyncio_gather.py  test_asyncio_run.py  test_asyncio_sock.py  test_rtcp_packet.py
(+19 files in other folders)
